<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rio</name>
  <version>1.0.0</version>
  <description>
    Radar-inertial odometry estimation for mobile devices and robots.
  </description>
  <author>Rik Girod</author>
  <maintainer email="brik@ethz.ch">Rik Girod</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rosbag</depend>
  <depend>lpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>nodelet</depend>
  <depend>gtsam_catkin</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
